Use default variables in config

--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,18 @@ timezone: America/New_York
 collections:
   dnd:
     output: true
+defaults:
+  -
+    scope:
+      path: "dnd"
+      type: "posts"
+    values:
+      category: "dnd"
+      layout: "post"
+  -
+    scope:
+      path: "_posts/dnd"
+      type: "posts"
+    values:
+      hide_in_index: true
 
