Add default layouts to configuration
All pages will use the "post" layout by default. Pages in the
`brewing/` directory use the "brew" layout by default. This removes the
requirement to remember to add `layout: post` to the frontmatter for
each new post/page. Only pages that break from the norm need to define a
layout.

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,17 @@ timezone: America/New_York
 title: ryanjhouston.com
 author: Ryan Houston
 description: Software development, homebrewing, and life that happens in between.
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "post"
+  -
+    scope:
+      path: "brewing"
+    values:
+      layout: "brew"
 collections:
   recipes:
     output: true
