Use local user as jekyll uid/gid
Use `UID=${UID} GID=${GID} docker-compose up` so prevent file
permissions from getting messed up. Also would have worked without
adding these environment vars and just use
`JEKYLL_UID=${UID} JEKYLL_GID=${GID} docker-compose up` but that's more
typing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   site:
     image: jekyll/jekyll:latest
     command: jekyll server --drafts
+    environment:
+      - "JEKYLL_UID=${UID}"
+      - "JEKYLL_GID=${GID}"
     ports:
       - 4000:4000
       - 35729:35729
